--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -28,6 +28,7 @@
     <div class="row justify-content-center">
         <!-- <div class="col-xs-12 col-sm-8 col-md-6"> -->
         <div class="col-xs-12 col-sm-10 col-md-10">
+            <p>February 2022</p>
             <h4>Hybrid images</h4>
             <p>
             As introduced by Oliva et al. in the 2006 SIGGRAPH paper, <a href="https://stanford.edu/class/ee367/reading/OlivaTorralb_Hybrid_Siggraph06.pdf">"Hybrid Images"</a>, high frequency data from one image can be combined with low frequency data from another to produce an image in which both originals can be seen at different distances.
