--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -28,6 +28,7 @@
     <div class="row justify-content-center">
         <!-- <div class="col-xs-12 col-sm-8 col-md-6"> -->
         <div class="col-xs-12 col-sm-10 col-md-10">
+            <p>March 2022</p>
             <h4>Image mosaicing</h4>
             <p>
             An image is like a projection of 3D rays onto a 2D plane.
