--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -28,6 +28,7 @@
     <div class="row justify-content-center">
         <!-- <div class="col-xs-12 col-sm-8 col-md-6"> -->
         <div class="col-xs-12 col-sm-10 col-md-10">
+            <p>January 2022</p>
             <h4>Aligning and compositing images of the Prokudin-Gorskii photo collection</h4>
             <p>
             Sergei Milkhailovich Prokudin-Gorskii (1863-1944) was a Russian chemist and photographer, best known for his cutting-edge methods of color photography.
