--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -158,7 +158,7 @@
             solves this problem. Here's an image of some trig on
             a whiteboard.
             <p>
-            <img src="mosaics/torectify.png" width="600" alt="To rectify">
+            <img src="mosaics/torectify.jpg" width="600" alt="To rectify">
             </p>
             Now, I clicked to find the coordinates of the four corners
             of the whiteboard, and I then chose coordinates of a perfect
