--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -147,7 +147,7 @@
             (check the previous images if you don't believe me).
             <h4>Rectifying images</h4>
             Here I'll take a short break from mosaics in order to show
-            another nice use of a homography. We can map points in an
+            another use of a homography. We can map points in an
             image not to another image's plane but instead to some
             points that give a desired property (shape).
             An example will make this clearer.
