--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -166,7 +166,8 @@
             The resulting homography gives us a straight-on perspective
             of the trig!
             <p>
-            <img src="mosaics/rectified.png" width="600" alt="Rectified">
+            <img src="mosaics/rectified.png" width="200" alt="Rectified">
+            <img src="mosaics/zoomrectified.png" width="600" alt="Zoomed in rectified">
             </p>
             This is really quite a satisfying exercise, and a nice
             application of this image warping.
