--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -158,7 +158,8 @@
             solves this problem. Here's an image of some trig on
             a whiteboard.
             <p>
-            <img src="mosaics/torectify.jpg" width="300" alt="To rectify">
+            <img src="mosaics/torectify.jpg" width="200" alt="To rectify">
+            <img src="mosaics/zoomtorectify.jpg" width="400" alt="Zoomed in to rectify">
             </p>
             Now, I clicked to find the coordinates of the four corners
             of the whiteboard, and I then chose coordinates of a perfect
@@ -166,7 +167,7 @@
             The resulting homography gives us a straight-on perspective
             of the trig!
             <p>
-            <img src="mosaics/rectified.png" width="160" alt="Rectified">
+            <img src="mosaics/rectified.png" width="200" alt="Rectified">
             <img src="mosaics/zoomrectified.png" width="400" alt="Zoomed in rectified">
             </p>
             This is really quite a satisfying exercise, and a nice
