--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -170,8 +170,26 @@
             <img src="mosaics/rectified.png" width="200" alt="Rectified">
             <img src="mosaics/zoomrectified.png" width="400" alt="Zoomed in rectified">
             </p>
+            <p>
             This is really quite a satisfying exercise, and a nice
             application of this image warping.
+            This rectifying isn't the focus of this work really,
+            but it's too tempting to not try to push this to a limit.
+            Here's another image that I took of that same white board
+            on another day. It's really difficult to read the writing
+            at all in this image because it was taken at such a steep 
+            angle.
+            </p>
+            <p>
+            <img src="mosaics/steep.jpg" width="200" alt="Steep">
+            <img src="mosaics/zoomsteep.jpg" width="400" alt="Zoomed steep">
+            </p>
+            The same process as before yields the following result.
+            <p>
+            <img src="mosaics/steeprectified.png" width="200" alt="Steep rectified">
+            <img src="mosaics/zoomsteeprectified.png" width="400" alt="Zoomed steep rectified">
+            </p>
+            interesting, eh?
             <h4>New images</h4>
             Back to mosaicing.
             So far, I've let the two images from lunch
