--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -186,8 +186,8 @@
             </p>
             The same process as before yields the following result.
             <p>
-            <img src="mosaics/steeprectified.png" width="200" alt="Steep rectified">
-            <img src="mosaics/zoomsteeprectified.png" width="400" alt="Zoomed steep rectified">
+            <img src="mosaics/rectifiedsteep.png" width="200" alt="Steep rectified">
+            <img src="mosaics/zoomrectifiedsteep.png" width="400" alt="Zoomed steep rectified">
             </p>
             interesting, eh?
             <h4>New images</h4>
