--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -157,6 +157,7 @@
             read because of the angle. Well, a quick homography 
             solves this problem. Here's an image of some trig on
             a whiteboard.
+            </p>
             <p>
             <img src="mosaics/torectify.jpg" width="200" alt="To rectify">
             <img src="mosaics/zoomtorectify.jpg" width="400" alt="Zoomed in to rectify">
@@ -166,6 +167,7 @@
             rectangle and treated them as the correspondences.
             The resulting homography gives us a straight-on perspective
             of the trig!
+            </p>
             <p>
             <img src="mosaics/rectified.png" width="200" alt="Rectified">
             <img src="mosaics/zoomrectified.png" width="400" alt="Zoomed in rectified">
@@ -184,12 +186,33 @@
             <img src="mosaics/steep.jpg" width="200" alt="Steep">
             <img src="mosaics/zoomsteep.jpg" width="400" alt="Zoomed steep">
             </p>
+            <p>
             The same process as before yields the following result.
+            </p>
             <p>
             <img src="mosaics/rectifiedsteep.png" width="200" alt="Steep rectified">
             <img src="mosaics/zoomrectifiedsteep.png" width="400" alt="Zoomed steep rectified">
             </p>
-            interesting, eh?
+            <p>
+            Come on. That's cool.
+            </p>
+            <p>
+            It would be wrong to not now push this idea to the limit.
+            Here is another image with an even steeper angle where the 
+            result isn't quite readable.
+            </p>
+            <p>
+            <img src="mosaics/rectifiedsteep.png" width="200" alt="Steep rectified">
+            <img src="mosaics/zoomrectifiedsteep.png" width="400" alt="Zoomed steep rectified">
+            </p>
+            <!--
+            <p>
+            This fails because...
+            There might be somethign interestign here 
+            (TEsla reading signs) ...
+            Existing work after a brief look, ...
+            </p>
+            -->
             <h4>New images</h4>
             Back to mosaicing.
             So far, I've let the two images from lunch
