--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -197,6 +197,18 @@
             Come on. That's cool.
             </p>
             <p>
+            There is something interesting here. 
+            I wonder whether finding a homography to re-project 
+            text makes it more readable not just for humans but
+            for machine learning models. Maybe a self-driving vehicle
+            could read road signs more accurately if they make use of 
+            this image rectificaiton with homographies.
+            It also makes me wonder if we should be rectifying 
+            recorded lectures... I don't love watching algebra
+            recordings with distorted writing.
+            </p>
+            <!--
+            <p>
             It would be wrong to not now push this idea to the limit.
             Here is another image with an even steeper angle where the 
             result isn't quite readable.
@@ -205,7 +217,6 @@
             <img src="mosaics/rectifiedsteep.png" width="200" alt="Steep rectified">
             <img src="mosaics/zoomrectifiedsteep.png" width="400" alt="Zoomed steep rectified">
             </p>
-            <!--
             <p>
             This fails because...
             There might be somethign interestign here 
