--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -201,8 +201,8 @@
             I wonder whether finding a homography to re-project 
             text makes it more readable not just for humans but
             for machine learning models. Maybe a self-driving vehicle
-            could read road signs more accurately if they make use of 
-            this image rectificaiton with homographies.
+            could read road signs more accurately if it made use of 
+            this image rectificaiton with a homography.
             It also makes me wonder if we should be rectifying 
             recorded lectures... I don't love watching algebra
             recordings with distorted writing.
