code snippet, done for now

--- a/computational_photography/mosaicing.html
+++ b/computational_photography/mosaicing.html
@@ -220,23 +220,6 @@
             recorded lectures... I don't love watching algebra
             recordings with distorted writing.
             </p>
-            <!--
-            <p>
-            It would be wrong to not now push this idea to the limit.
-            Here is another image with an even steeper angle where the 
-            result isn't quite readable.
-            </p>
-            <p>
-            <img src="mosaics/rectifiedsteep.png" width="200" alt="Steep rectified">
-            <img src="mosaics/zoomrectifiedsteep.png" width="400" alt="Zoomed steep rectified">
-            </p>
-            <p>
-            This fails because...
-            There might be somethign interestign here 
-            (TEsla reading signs) ...
-            Existing work after a brief look, ...
-            </p>
-            -->
             <h4>New images</h4>
             Back to mosaicing.
             So far, I've let the two images from lunch
@@ -252,7 +235,21 @@
             (in Python) to remind you of the several steps I'm taking
             to make my mosaics.
             </p>
-            <h4>
+            <h4>Bit of code</h4>
+            <p>At one point I had ambitions of interesting
+            photos other than my lunch 
+            (which there is still some small chance I 
+            do before these are looked at...), but at this point
+            I will now just add a code snippet to wrap up.
+            <P>
+            Because it occured to me that I'm fulfilling some
+            of the requirements of this project by implementing
+            that homography computation myself, I figured I should
+            show it. Here is my function for that.
+            </p>
+            <p>
+            <script src="https://gist.github.com/obroadrick/33f6129bd191cbaa85d5f18902440b2d.js"></script>
+            </p>
             <h5>Sources</h5>
             <p>
             [1] <a href="https://www2.seas.gwu.edu/~pless/computationalPhotography/project3.php">Assignment from Professor Pless</a><br>
