--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 <a href="https://fc22.ifca.ai/workshops.html">Voting '22</a>, 
                 and additional manuscripts presenting novel audits and 
                 related results are currently being drafted. 
+                In April 2022, I presented 
+                <a href="./posters/audits_poster.pdf">a poster</a> 
+                on some of this work at the GW SEAS R+D Research Showcase.
 
                 <ol>
                 <li>
