--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 related results are currently being drafted. 
                 In April 2022, I presented 
                 <a href="./posters/audits_poster.pdf">a poster</a> 
-                on some of this work at the GW SEAS R+D Research Showcase.
+                on some of this work at the GW SEAS R+D Showcase.
 
                 <ol>
                 <li>
