--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
                 <a href="./posters/audits_poster.pdf">a poster</a> 
                 on some of this work at the GW SEAS R+D Showcase.
 
-                <ol>
+                <ul>
                 <li>
+                [<a href="https://youtu.be/XyWogUQDf1c">video</a>]
                 Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, <a href="papers/simulations-of-ballot-polling-rlas.pdf">"Simulations of Ballot Polling Risk-Limiting Audits"</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022.
-                </ol>
+                </ul>
             </p>
             <h5>Scheduling</h5>
             <p>
