--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 
                 <ul>
                 <li>
-                [<a href="https://youtu.be/XyWogUQDf1c">video</a>]
-                Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, <a href="papers/simulations-of-ballot-polling-rlas.pdf">"Simulations of Ballot Polling Risk-Limiting Audits"</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022.
+                [<a href="https://youtu.be/XyWogUQDf1c">video</a>,
+                <a href="papers/simulations-of-ballot-polling-rlas.pdf">pdf</a>]
+                Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, "Simulations of Ballot Polling Risk-Limiting Audits". Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022.
                 </ul>
             </p>
             <h5>Scheduling</h5>
