--- a/computational_photography/computational_photography.html
+++ b/computational_photography/computational_photography.html
@@ -37,7 +37,8 @@
             <ul>
             <li><a href="./prokudin-gorskii.html">Aligning and compositing images of the Prokudin-Gorskii photo collection</a>
             <li><a href="./hybrid-images.html">Hybrid images</a>
-            <li><a href="./mosaicing.html">Image mosaicing</a>
+            <li><a href="./stitching.html">Image stitching</a>
+            <li><a href="./imagemosaics.html">Image mosaics"</a>
             </ul>
         </div>
     </div>
