--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -46,7 +46,7 @@
             <img src="imagemosaics/csatgw.png" width="500" alt="cs@gw original">
             </p>
             <p>
-            For testing, I used the CIFAR-10 dataset which has many thousands of labeled images for training machine learning models, but of course suffices for our purposes too.
+            For testing, I used the <a href="https://www.cs.toronto.edu/~kriz/cifar.html">CIFAR-10 dataset</a> which has many thousands of labeled images for training machine learning models, but of course suffices for our purposes too.
             If I go ahead and use 10,000=10^4 images from the dataset, we imediately get a crisp result:
             </p>
             <p><img src="imagemosaics/csatgw10k.png" width="500" alt="cs@gw 10k"></p>
