--- a/computational_photography/computational_photography.html
+++ b/computational_photography/computational_photography.html
@@ -40,7 +40,11 @@
             <li><a href="./stitching.html">Image stitching</a>
             <li><a href="./imagemosaics.html">Image mosaics</a>
             </ul>
+
         </div>
+        <img src="prokudin-gorskii-images/00458u_aligned.jpg" width="400" alt="My aligned version">
+        <img src="hybrid-images/tree.png" width="400" alt="tree">
+        <img src="imagemosaics/somemore.png" width="500" alt="cs@gw some more">
     </div>
 </div>
 
