--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -48,7 +48,7 @@
             And here is the code that makes an image mosaic using this matrix of vectorized images (called 'vectors' in the code).
             </p>
             <p><script src="https://gist.github.com/obroadrick/e165290a54da3667e96d95ebce147783.js"></script></p>
-            To test my code, I made a simple image with a white background and black text:
+            As a target image, I made a simple white background and black text:
             <p><img src="imagemosaics/csatgw.png" width="500" alt="cs@gw original"></p>
             <p>
             For testing, I used the <a href="https://www.cs.toronto.edu/~kriz/cifar.html">CIFAR-10 dataset</a> which has many thousands of labeled images for training machine learning models, but of course suffices for our purposes too.
