--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -46,6 +46,7 @@
             <p><img src="imagemosaics/vectors.png" width="300" alt="vectors"></p>
             <p>
             And here is the code that makes an image mosaic using this matrix of vectorized images (called 'vectors' in the code).
+            This code assumes that 'order', the ordered list of patch coordinates, is already decided. Like I mentioned above, I build the mosaic from the middle out to use the best images in the center.
             </p>
             <p><script src="https://gist.github.com/obroadrick/e165290a54da3667e96d95ebce147783.js"></script></p>
             As a target image, I made a simple white background and black text:
