--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -87,7 +87,7 @@
             Other ideas are appreciated!
             </p>
             <p>
-            Here is <a href="https://drive.google.com/drive/folders/1H19Ca2QXDz44BivIURKU3-LXBug2VAkq?usp=sharing">a link to the current dataset.</a> The images are named i.jpg where i ranges from 0 to 623.
+            Here is <a href="https://drive.google.com/drive/folders/1H19Ca2QXDz44BivIURKU3-LXBug2VAkq?usp=sharing">a link to the current dataset.</a> The images are named i.png where i ranges from 0 to 623.
             </p>
         </div>
     </div>
