--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -87,8 +87,14 @@
             Other ideas are appreciated!
             </p>
             <p>
-            Here is <a href="https://drive.google.com/drive/folders/1H19Ca2QXDz44BivIURKU3-LXBug2VAkq?usp=sharing">a link to the current dataset.</a> The images are named i.png where i ranges from 0 to 623.
+            Here is <a href="https://drive.google.com/drive/folders/1H19Ca2QXDz44BivIURKU3-LXBug2VAkq?usp=sharing">a link to the current dataset.</a> The images are named i.png where i ranges from 0 to 623 in no particular order. As I've described, this dataset is a mere prototype of what it could turn into. It could be a nice project to open source for future GW CS students to build on and use in their own projects...
             </p>
+            <h6>Dataset Contributors</h6>
+            Thank you very much to those who have contributed to this dataset!
+            <ul>
+            <li>Catherine Meadows
+            <li>Alyssa Ilaria 
+            </ul>
         </div>
     </div>
 </div>
