--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
-            <p><em>If you are a GW CS student, the inclusivity survey is now closed, and the responses were used to inform a proposal to the department. Email me (obroadrick at gwu dot edu) if you'd like me to send you the proposal or if you'd like to discuss the matter at all.</em>
+            <p><em>If you are a GW CS student looking for the inclusivity survey, it is now closed, and the responses were used to inform a proposal to the department which ultimately led to the formation of the formation of the <a href="https://www.cs.seas.gwu.edu/justice-equity-diversity-and-inclusion-jedi-committee">CS Department Justice, Equity, Diversity, and Inclusion (JEDI) Committee</a>. Email me (obroadrick at gwu dot edu) if you have any questions or thoughts on this topic! </em>
             <p>
                 I am a senior undergraduate student studying computer science 
                 and math at 
