--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -92,8 +92,10 @@
             <h6>Dataset Contributors</h6>
             Thank you very much to those who have contributed to this dataset!
             <ul>
-            <li>Catherine Meadows
+            <li>Andy Feng
             <li>Alyssa Ilaria 
+            <li>Catherine Meadows
+            <li>Steven Yoon
             </ul>
         </div>
     </div>
