comments, better image

--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -81,13 +81,16 @@
             Then, I took several dozen images with my phone in and around SEH.
             The slightly improved dataset gave me resulted in the following mosaic.
             </p>
-            <p><img src="imagemosaics/somemore.png" width="500" alt="cs@gw some more"></p>
+            <p><img src="imagemosaics/better.png" width="500" alt="cs@gw better"></p>
+            <p>
+            I also want to acknowledge that I seem to have developed some strong opinions about what constitutes a good image mosaic. Contrary to what is common, I really dislike adjusted hues of images, and I really dislike images being used more than once. These factors motivate that a strong path forward for me is building a bigger dataset.
+            </p>
             <p>
             Now I need more images in this dataset. I really appreciate ideas on how to go about this. I already intend to (1) reach out to friends and ask for images they have, (2) take many more images myself, asking CS folks to stand here and there for them, and (3) scrape some more images from Google.
             Other ideas are appreciated!
             </p>
             <p>
-            Here is <a href="https://drive.google.com/drive/folders/1H19Ca2QXDz44BivIURKU3-LXBug2VAkq?usp=sharing">a link to the current dataset.</a> The images are named i.png where i ranges from 0 to 623 in no particular order. As I've described, this dataset is a mere prototype of what it could turn into. It could be a nice project to open source for future GW CS students to build on and use in their own projects...
+            Here is <a href="https://drive.google.com/drive/folders/1H19Ca2QXDz44BivIURKU3-LXBug2VAkq?usp=sharing">a link to the current dataset.</a> The images are named i.png where i ranges from 0 to 663 in no particular order. As I've described, this dataset is a mere prototype of what it could turn into. It could be a nice project to open source for future GW CS students to build on and use in their own projects...
             </p>
             <h6>Dataset Contributors</h6>
             Thank you very much to those who have contributed to this dataset!
