--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -81,7 +81,7 @@
             Then, I took several dozen images with my phone in and around SEH.
             The slightly improved dataset gave me resulted in the following mosaic.
             </p>
-            <p><img src="imagemosaics/better.png" width="500" alt="cs@gw better"></p>
+            <p><img src="imagemosaics/betteryet.png" width="500" alt="cs@gw better yet"></p>
             <p>
             I also want to acknowledge that I seem to have developed some strong opinions about what constitutes a good image mosaic. Contrary to what is common, I really dislike adjusted hues of images, and I really dislike images being used more than once. These factors motivate that a strong path forward for me is building a bigger dataset.
             </p>
