--- a/computational_photography/imagemosaics.html
+++ b/computational_photography/imagemosaics.html
@@ -79,9 +79,11 @@
             This almost looks like a step backwards. First of all, much of the outter border of the image isn't even getting unique images anymore because there aren't enough. Further, there is much less contrast in this mosaic. The solution: find more images for the dataset.
             I went on and added some images by hand from various CS Professor's website, lab webpages, and the CS Department website. 
             Then, I took several dozen images with my phone in and around SEH.
-            The slightly improved dataset gave me resulted in the following mosaic.
+            I got images from peers and professors, and I also wrote a script to remove all duplicates (for sure, this time).
+            The result is moving in the right direction.
+            Notice that the CS@GW text is very readable from afar and breaks down as you get closer, reminding me of the hybrid images project from earlier in this course.
             </p>
-            <p><img src="imagemosaics/betteryet.png" width="500" alt="cs@gw better yet"></p>
+            <p><img src="imagemosaics/removed-duplicates.png" width="500" alt="cs@gw removed duplicates"></p>
             <p>
             I also want to acknowledge that I seem to have developed some strong opinions about what constitutes a good image mosaic. Contrary to what is common, I really dislike adjusted hues of images, and I really dislike images being used more than once. These factors motivate that a strong path forward for me is building a bigger dataset.
             </p>
